--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileColor" content="#00a300">
     <meta name="theme-color" content="#ffffff">
 
-    <title>React App</title>
+    <title>Robofriends App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
